--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
 		<meta name="msapplication-TileImage" content="/mstile-144x144.png">
 		<meta name="theme-color" content="#ffffff">
 
-		<meta name="msapplication-TileColor" content="#6737b9">
-		<meta name="theme-color" content="#ffffff">
-
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/css/uikit.min.css">
 
 		<style>.wrap::before {position: absolute; height: 100vh; width: 100vw; content: ''; z-index: 1; background-color: rgba(0,0,0,0.6);} .lead {font-size: 1.175em; font-weight: 300;} .uk-logo img {height: 60px;}</style>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127182332-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-127182332-1');
+		</script>
 	</head>
 
 	<body class="uk-light wrap uk-background-norepeat uk-background-cover uk-background-center-center uk-background-secondary" style="background-image: url(img/fc10c534e892c74deb3e0c7507cc1598.jpg)">
