Replacing company name with LLC name.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 
 			<div class="uk-position-bottom-center uk-position-small">
-				<span class="uk-text-small uk-text-center">Copyright © 2018 ZealByte.com</span>
+				<span class="uk-text-small uk-text-center">Copyright © 2018 ZealByte Ventures LLC.</span>
 			</div>
 
 		</div>
